--- a/nik/resources/css/layout.css
+++ b/nik/resources/css/layout.css
@@ -6,7 +6,7 @@ a { text-decoration: none; color: #000;  }
 
 .popup { position: fixed; right: -460px;  z-index: 1000; width: 460px; padding: 40px 32px; box-sizing: border-box; background: #fff; transition: all 0.3s ease; }
 .popup h2 { position: relative; left: 50%; transform: translateX(-50%); display: inline-block; width: 100px; margin: 0 auto; margin-bottom: 30px; }
-.popup h2 a { display: block; height: 100%; color: none; }
+.popup h2 a { display: block; height: 100%; color: transparent; }
 .popup h2 a img { width: 100%; }
 .popup .pop_cont { border: 1px solid #e5e5e5; }
 
@@ -19,7 +19,7 @@ a { text-decoration: none; color: #000;  }
 .popup.bag .pop_cont .list { height: 400px; overflow-y: auto; }
 .popup.bag .pop_cont .list li { display: table; width: 100%; border-bottom: 1px solid #e5e5e5; padding: 10px 0; box-sizing: border-box; }
 .popup.bag .pop_cont .list li input { margin-top: 20px; vertical-align: middle; }
-.popup.bag .pop_cont .list li > a { display: table-cell; width: 70px; vertical-align: middle; margin: 0 0px; }
+.popup.bag .pop_cont .list li > a { display: table-cell; width: 70px; vertical-align: middle; margin: 0 0px; color: transparent; }
 .popup.bag .pop_cont .list li > a img {width: 100%;}
 .popup.bag .pop_cont .list li > dl { display: table-cell; vertical-align: middle; width: 75%;}
 .popup.bag .pop_cont .list li > dl > dt { font-size: 14px; font-weight: bold; color: #454646; }
@@ -89,7 +89,7 @@ header { position: fixed; width: 100%; z-index: 101; background: #fff;  }
 .header_top .wrap { max-width: 1400px; margin: 0 auto; padding: 0 15px; padding-top: 19px; padding-bottom: 7px; box-sizing: border-box; z-index: 102; text-align: left; }
 
 header h1 { display: inline-block; width: 80px; position: absolute; left: 50%; transform: translateX(-50%); bottom: 20px; z-index: 999; }
-header h1 > a { display: block; height: 100%; color: none; }
+header h1 > a { display: block; height: 100%; color: transparent; }
 header h1 > a > img { width: 100%; }
 header h1 > a > img.scroll {display: none;}
 
